# VstDistortion

./: CMakeLists.txt
JUCE/DemoRunner.app/Contents/: CodeResources  Info.plist
JUCE/DemoRunner.app/Contents/Resources/: AppIcon.icns  Assets.car
JUCE/DemoRunner.app/Contents/_CodeSignature/: CodeResources
JUCE/Projucer.app/Contents/: CodeResources  Info.plist
JUCE/Projucer.app/Contents/Resources/: AppIcon.icns  Assets.car
JUCE/Projucer.app/Contents/_CodeSignature/: CodeResources
src/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
